--- a/suricata/docker-compose.yml
+++ b/suricata/docker-compose.yml
@@ -8,7 +8,7 @@ services:
       - NET_ADMIN
       - SYS_NICE
     volumes:
-      - /var/log/suricata:/var/log/suricata:z
+      - /tmp/suricata:/var/log/suricata:z
       - "./tools:/tools:z"
       - "./pcaps:/pcaps:z"
     working_dir: /tools
